<resources>
    <string name="app_name">MovFlix</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_movie_list">My Movie</string>
    <string name="text_info">Info</string>
    <string name="text_share">Share</string>
    <string name="text_now_playing">Now Playing</string>
    <string name="text_popular">Popular</string>
    <string name="text_upcoming_movies">Upcoming Movies</string>
    <string name="text_top_rated">Top Rated</string>
    <string name="text_no_data">No Data</string>
    <string name="text_copy_url">Copy URL</string>
    <string name="text_attention_title">Watch this movie!</string>
    <string name="text_share_film">Share it to your closest people</string>
    <string name="text_quick_share">Quick Share</string>
    <string name="text_my_lists">My Lists</string>
    <string name="text_share_it">Share</string>
    <string name="text_url_poster">https://image.tmdb.org/t/p/w500%1$s</string>
    <string name="text_header_view_more">Header Text</string>
    <string name="text_empty_movie_list">Tidak ada movie list</string>
    <string name="text_my_list">My List</string>
    <string name="text_error">Gagal Memuat Data</string>
    <string name="text_done_delete_to_list">Berhasil menghapus ke list</string>
    <string name="text_failed_delete_to_list">Gagal menghapus ke list</string>
    <string name="text_done_add_to_list">Berhasil menambahkan ke list</string>
    <string name="text_url_incopy">URL disalin</string>
    <string name="text_failed_add_to_list">Gagal menambakan ke list</string>
    <string name="text_title_list">My List Movie </string>
    <string name="text_failed_to_load_data">Failed To Load Data</string>
    <string name="text_header_intent">HEADER</string>
    <string name="text_intent_top_rated">Top Rated</string>
    <string name="text_intent_popular">Popular</string>
    <string name="text_intent_upcoming">Upcoming</string>
    <string name="text_intent_now_playing">Now Playing</string>
    <string name="text_link_image">https://image.tmdb.org/t/p/w500</string>
    <string name="text_label_url">URL</string>
</resources>