<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_attention"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_attention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_attention_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        tools:text="Kung Fu Panda 4"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_attention"/>

    <TextView
        android:id="@+id/tv_url_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="https://oawkoakwoakwoakok.jpg"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_film" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_copy_url"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:paddingHorizontal="9dp"
        app:cornerRadius="12dp"
        android:text="@string/text_copy_url"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_url_film"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_quick_share"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:paddingHorizontal="9dp"
        app:cornerRadius="12dp"
        android:layout_marginEnd="60dp"
        android:text="@string/text_quick_share"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_url_film" />

    <TextView
        android:id="@+id/tv_share_attention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="60dp"
        android:text="@string/text_share_film"
        android:textColor="@color/md_theme_outline"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_copy_url"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
